<resources>
    <string name="app_name">huilv</string>
    <string name="input_hint">Iput RMB</string>
    <string name="btn_dollar">DOllAR</string>
    <string name="btn_euro">EURO</string>
    <string name="btn_won">WON</string>
    <string name="result">Hello</string>
    <string name="dollarRate">0.1503</string>
    <string name="euroRate">0.1266</string>
    <string name="wonRate">170.2708</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>